--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
+//    id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,7 +36,12 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.firebase.auth
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+
+    implementation platform('com.google.firebase:firebase-bom:33.12.0')
+//    implementation 'com.google.firebase:firebase-auth'
+//    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
