--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         targetSdk 35
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -44,4 +44,13 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.12.0')
 //    implementation 'com.google.firebase:firebase-auth'
 //    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-firestore:25.1.4'
+    implementation 'com.android.support.multidex:1.0.3'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+//    implementation 'com.github.bumptech.glide:4.15.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 }
