--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,15 @@ dependencies {
 //    implementation 'com.google.firebase:firebase-auth'
 //    implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-firestore:25.1.4'
-    implementation 'com.android.support.multidex:1.0.3'
+//    implementation 'com.android.support.multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 //    implementation 'com.github.bumptech.glide:4.15.0'
     implementation "androidx.cardview:cardview:1.0.0"
+//    implementation 'androidx.multidex:multidex:2.0.1'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
